--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     </head>
     <body class="page">
         <header class="header decorated-zone">
-            <div class="decoration">
-          <span class="icon-text icon-top">REC</span>
-        </div>
+
             <nav class="header__theme-menu">
+                <div class="decoration">
+                    <span class="icon-text">REC</span>
+                    <div class="icon-top"></div>
+                </div>
                 <ul class="header__theme-menu-list">
                     <li class="header__theme-menu-item">
                         <button class="header__theme-menu-button header__theme-menu-button_type_light">
@@ -40,9 +42,11 @@
                     </li>
                 </ul>
             </nav>
+        
             <h1 class="heading-tittle">no focus</h1>
 
-            <p class="introduction">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+            <p class="introduction">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+         <div class="icon-bottom"></div>
         </header>
         <script src="./scripts/script.js"></script>
         <section class="main">
@@ -143,7 +147,11 @@
       />
             </div>
         </section>
-        <footer></footer>
+        <footer class="footer">
+            <div class="footer-icon-top"></div>
+            <p class="footer-title">focus</p>
+            <div class="footer-icon-bottom"></div>
+        </footer>
     </body>
 </html>
 
