--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 направленное внимание.
             </p>
             </div>
-            <h3 class="item-heading">А можно в картинках?</h3>
+            <h3 class="item-heading-pictures">А можно в картинках?</h3>
             <div class="pictures">
                 <img
                 src="./images/sunset.png"
