--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="main">
             <div class="first-block"> <!-- first --> 
             <h2 class="subtitle">Почему сосредоточиться так сложно</h2>
-            <h3 class="item-heading +">Многозадачность</h3>
+            <h3 class="item-heading first-heading">Многозадачность</h3>
             <p class="main-text first-text">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
                 Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
