--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     </head>
     <body class="page">
         <header class="header decorated-zone">
-
             <nav class="header__theme-menu">
                 <div class="decoration" aria-hidden="true">
                     <span class="icon-text">REC</span>
@@ -42,111 +41,93 @@
                     </li>
                 </ul>
             </nav>
-        
+
             <h1 class="heading-tittle">no focus</h1>
 
-            <p class="introduction">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-         <div class="icon-bottom"></div>
+            <p class="introduction">
+                Что делать, когда не можешь делать ничего<br />
+                Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+            </p>
+            <div class="icon-bottom"></div>
         </header>
         <script src="./scripts/script.js"></script>
-        <section class="main">
-            <div class="first-block"> <!-- first --> 
-            <h2 class="subtitle">Почему сосредоточиться так сложно</h2>
-            <h3 class="item-heading first-heading">Многозадачность</h3>
-            <p class="main-text first-text">
-                Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
-                Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса».
-                Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
-            </p>
-            <h3 class="item-heading">Дофамин</h3>
-            <p class="main-text">
-                С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он?
-                Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше
-                отвлекаешься, тем больше удовольствия получаешь.
-            </p>
-        </div>
-        <div class="second-block"> <!-- second --> 
-            <h2 class="subtitle">Что снижает концентрацию внимания?</h2>
-            <h3 class="item-heading">Многозадачность</h3>
-            <p class="main-text">
-                Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости
-                вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
-            </p>
-            <h3 class="item-heading">Еда</h3>
-            <p class="main-text">
-                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»:
-                как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
-            </p>
-            <h3 class="item-heading">Гаджеты</h3>
-            <p class="main-text">
-                Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не
-                может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
-            </p>
-        </div>
-        <div class="third-block"> <!-- third --> 
-            <h2 class="subtitle">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-            <p class="last-item-heading">5 простых (на самом деле не очень) советов</p>
-            <h3 class="item-heading">Представьте небо и облака</h3>
-            <p class="main-text">
-                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
-                представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
-                волноваться о потенциальных проблемах из будущего.
-            </p>
-            <h3 class="item-heading">Включите музыку</h3>
-            <p class="main-text">
-                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
-                «белым шумом» или нейромузыкой.
-            </p>
-            <h3 class="item-heading">Прогуляйтесь</h3>
-            <p class="main-text">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с
-                физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-            </p>
-            <h3 class="item-heading">Хорошо ешьте</h3>
-            <p class="main-text">
-                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
-                хлеб из цельнозерновой пшеницы.
-            </p>
-            <h3 class="item-heading">Читайте</h3>
-            <p class="main-text">
-                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
-                направленное внимание.
-            </p>
+        <main>
+            <div class="first-block">
+                <!-- first -->
+                <h2 class="subtitle">Почему сосредоточиться так сложно</h2>
+                <h3 class="item-heading first-heading">Многозадачность</h3>
+                <p class="main-text first-text">
+                    Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
+                    Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания
+                    попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+                </p>
+                <h3 class="item-heading">Дофамин</h3>
+                <p class="main-text">
+                    С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут
+                    он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше
+                    отвлекаешься, тем больше удовольствия получаешь.
+                </p>
+            </div>
+            <div class="second-block">
+                <!-- second -->
+                <h2 class="subtitle">Что снижает концентрацию внимания?</h2>
+                <h3 class="item-heading">Многозадачность</h3>
+                <p class="main-text">
+                    Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости
+                    вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+                </p>
+                <h3 class="item-heading">Еда</h3>
+                <p class="main-text">
+                    «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные
+                    качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+                </p>
+                <h3 class="item-heading">Гаджеты</h3>
+                <p class="main-text">
+                    Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто
+                    не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+                </p>
+            </div>
+            <div class="third-block">
+                <!-- third -->
+                <h2 class="subtitle">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+                <p class="last-item-heading">5 простых (на самом деле не очень) советов</p>
+                <h3 class="item-heading">Представьте небо и облака</h3>
+                <p class="main-text">
+                    Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
+                    представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
+                    волноваться о потенциальных проблемах из будущего.
+                </p>
+                <h3 class="item-heading">Включите музыку</h3>
+                <p class="main-text">
+                    Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
+                    «белым шумом» или нейромузыкой.
+                </p>
+                <h3 class="item-heading">Прогуляйтесь</h3>
+                <p class="main-text">
+                    Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">показал</a>, что созерцание природы повышает концентрацию,
+                    в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая
+                    двадцатиминутная прогулка — тоже отличный вариант.
+                </p>
+                <h3 class="item-heading">Хорошо ешьте</h3>
+                <p class="main-text">
+                    Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
+                    хлеб из цельнозерновой пшеницы.
+                </p>
+                <h3 class="item-heading">Читайте</h3>
+                <p class="main-text">
+                    Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
+                    направленное внимание.
+                </p>
             </div>
             <h3 class="item-heading-pictures">А можно в картинках?</h3>
             <div class="pictures">
-                <img
-                src="./images/sunset.png"
-                alt="Изображение заката на фоне воды и гор"
-                class="section__image sunset"
-                loading="lazy"
-              />
-              <img
-              src="./images/ice-cream.png"
-              alt="Шарики мороженого с мордочками"
-              class="section__image ice-cream"
-              loading="lazy"
-            />
-            <img
-            src="./images/tape.png"
-            alt="Изображение кассеты"
-            class="section__image tape"
-            loading="lazy"
-          />
-          <img
-          src="./images/books.png"
-          alt="Стопка книг с кружкой чая"
-          class="section__image books"
-          loading="lazy"
-        />
-        <img
-        src="./images/street.png"
-        alt="Улица с низкой застройкой"
-        class="section__image street"
-        loading="lazy"
-      />
+                <img src="./images/sunset.png" alt="Изображение заката на фоне воды и гор" class="section__image sunset" loading="lazy" />
+                <img src="./images/ice-cream.png" alt="Шарики мороженого с мордочками" class="section__image ice-cream" loading="lazy" />
+                <img src="./images/tape.png" alt="Изображение кассеты" class="section__image tape" loading="lazy" />
+                <img src="./images/books.png" alt="Стопка книг с кружкой чая" class="section__image books" loading="lazy" />
+                <img src="./images/street.png" alt="Улица с низкой застройкой" class="section__image street" loading="lazy" />
             </div>
-        </section>
+        </main>
         <footer class="footer">
             <div class="footer-icon-top"></div>
             <p class="footer-title">focus</p>
@@ -154,5 +135,3 @@
         </footer>
     </body>
 </html>
-
-
