--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
         <script src="./scripts/script.js"></script>
         <main>
-            <div class="first-block">
+            <section class="first-block">
                 <!-- first -->
                 <h2 class="subtitle">Почему сосредоточиться так сложно</h2>
                 <h3 class="item-heading first-heading">Многозадачность</h3>
@@ -67,8 +67,8 @@
                     он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше
                     отвлекаешься, тем больше удовольствия получаешь.
                 </p>
-            </div>
-            <div class="second-block">
+            </section>
+            <section class="second-block">
                 <!-- second -->
                 <h2 class="subtitle">Что снижает концентрацию внимания?</h2>
                 <h3 class="item-heading">Многозадачность</h3>
@@ -86,8 +86,8 @@
                     Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто
                     не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
                 </p>
-            </div>
-            <div class="third-block">
+            </section>
+            <section class="third-block">
                 <!-- third -->
                 <h2 class="subtitle">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
                 <p class="last-item-heading">5 простых (на самом деле не очень) советов</p>
@@ -118,15 +118,15 @@
                     Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
                     направленное внимание.
                 </p>
-            </div>
+            </section>
             <h3 class="item-heading-pictures">А можно в картинках?</h3>
-            <div class="pictures">
+            <section class="pictures">
                 <img src="./images/sunset.png" alt="Изображение заката на фоне воды и гор" class="section__image sunset" loading="lazy" />
                 <img src="./images/ice-cream.png" alt="Шарики мороженого с мордочками" class="section__image ice-cream" loading="lazy" />
                 <img src="./images/tape.png" alt="Изображение кассеты" class="section__image tape" loading="lazy" />
                 <img src="./images/books.png" alt="Стопка книг с кружкой чая" class="section__image books" loading="lazy" />
                 <img src="./images/street.png" alt="Улица с низкой застройкой" class="section__image street" loading="lazy" />
-            </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer-icon-top"></div>
