--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body class="page">
         <header class="header decorated-zone">
-            <span class="icon-text">REC</span>
+            <span class="icon-text">rec</span>
             <nav class="header__theme-menu">
                
             
