--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             <section class="how-to-block">
                 <!-- third -->
                 <h2 class="subtitle">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-                <p class="last-item-heading">5 простых (на самом деле не очень) советов</p>
+                <h3 class="last-item-heading">5 простых (на самом деле не очень) советов</h3>
         <article class="note">
-                <h3 class="item-heading normal-weight-heading">Представьте небо и облака</h3>
+                <h4 class="item-heading normal-weight-heading">Представьте небо и облака</h4>
                 <p class="main-text">
                     Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
                     представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
@@ -111,14 +111,14 @@
                 </p>
             </article>
          <article class="note">
-                <h3 class="item-heading normal-weight-heading">Включите музыку</h3>
+                <h4 class="item-heading normal-weight-heading">Включите музыку</h4>
                 <p class="main-text">
                     Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
                     «белым шумом» или нейромузыкой.
                 </p>
             </article>
        <article class="note">
-                <h3 class="item-heading normal-weight-heading">Прогуляйтесь</h3>
+                <h4 class="item-heading normal-weight-heading">Прогуляйтесь</h4>
                 <p class="main-text">
                     Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">показал</a>, что созерцание природы повышает концентрацию,
                     в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая
@@ -126,27 +126,29 @@
                 </p>
             </article>
         <article class="note">
-                <h3 class="item-heading normal-weight-heading">Хорошо ешьте</h3>
+                <h4 class="item-heading normal-weight-heading">Хорошо ешьте</h4>
                 <p class="main-text">
                     Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
                     хлеб из цельнозерновой пшеницы.
                 </p>
             </article>
          <article class="note">
-                <h3 class="item-heading normal-weight-heading">Читайте</h3>
+                <h4 class="item-heading normal-weight-heading">Читайте</h4>
                 <p class="main-text">
                     Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
                     направленное внимание.
                 </p>
             </article>
             </section>
-            <section class="pictures">
+            <section>
                 <h3 class="item-heading-pictures">А можно в картинках?</h3>
+            <article class="pictures">
                 <img src="./images/sunset.png" alt="Изображение заката на фоне воды и гор" class="section__image sunset" loading="lazy" />
                 <img src="./images/ice-cream.png" alt="Шарики мороженого с мордочками" class="section__image ice-cream" loading="lazy" />
                 <img src="./images/tape.png" alt="Изображение кассеты" class="section__image tape" loading="lazy" />
                 <img src="./images/books.png" alt="Стопка книг с кружкой чая" class="section__image books" loading="lazy" />
                 <img src="./images/street.png" alt="Улица с низкой застройкой" class="section__image street" loading="lazy" />
+            </article>
             </section>
         </main>
         <footer class="footer  decorated-zone">
