--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </main>
         <footer class="footer  decorated-zone">
            
-            <p class="footer-title">focus</p>
+            <h2 class="footer-title">focus</h2>
             
         </footer>
         <script src="./scripts/script.js"></script>
