--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <!-- first -->
                 <h2 class="subtitle">Почему сосредоточиться так сложно</h2>
             <article class="note">
-                <h3 class="item-heading">Многозадачность</h3>
+                <h3 class="item-heading task-heading">Многозадачность</h3>
                 <p class="main-text">
                     Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
                     Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" class="hyperlink" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания
@@ -101,8 +101,8 @@
             <section class="how-to-block">
                 <!-- third -->
                 <h2 class="subtitle">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-                <h3 class="last-item-heading">5 простых (на самом деле не очень) советов</h3>
-        <article class="note">
+                <h3 class="advice-item-heading">5 простых (на самом деле не очень) советов</h3>
+        <article class="note sky">
                 <h4 class="item-heading normal-weight-heading">Представьте небо и облака</h4>
                 <p class="main-text">
                     Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
