--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="dark light" />
+        <meta name="color-scheme" content="auto dark light" />
         <title>Сложно сосредоточиться</title>
         <link rel="stylesheet" href="./fonts/fonts.css" />
         <link rel="stylesheet" href="./styles/globals.css" />
@@ -28,7 +28,7 @@
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
+                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled checked aria-pressed="true">
                             Авто
                         </button>
                     </li>
