--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <nav class="header__theme-menu">
                 <ul class="header__theme-menu-list">
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_type_light">
+                        <button class="header__theme-menu-button header__theme-menu-button_type_light" aria-pressed="true">
                             День
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled checked aria-pressed="true">
+                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
                             Авто
                         </button>
                     </li>
