--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button  header__theme-menu-button_type_auto" disabled>
+                        <button class="header__theme-menu-button  header__theme-menu-button_type_auto" >
                             Авто
                         </button>
                     </li>
