--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_active  header__theme-menu-button_type_auto" >
+                        <button class="header__theme-menu-button  header__theme-menu-button_type_auto" >
                             Авто
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button  header__theme-menu-button_active header__theme-menu-button_type_dark" >
+                        <button class="header__theme-menu-button header__theme-menu-button_type_dark" >
                             Неон
                         </button>
                     </li>
