--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="./styles/style.css" />
         <link rel="stylesheet" href="./styles/variables.css" />
         <link rel="stylesheet" href="./styles/style.css" />
-        <link rel="stylesheet" href="./styles/dark.css" media="(prefers-color-scheme: dark)" />
-        <link rel="stylesheet" href="./styles/light.css" media="(prefers-color-scheme: light)"/>
+        <link rel="stylesheet" href="./styles/dark.css" />
+        <link rel="stylesheet" href="./styles/light.css" />
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
         <link rel="icon" type="image/x-icon" sizes="any" href="images/favicon.ico" />
         <link rel="apple-touch-icon" href="./images/favicon.png" />
