--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="dark light" />
+        <meta name="color-scheme" content="light dark" />
         <title>Сложно сосредоточиться</title>
         <link rel="stylesheet" href="./fonts/fonts.css" />
         <link rel="stylesheet" href="./styles/globals.css" />
@@ -23,17 +23,17 @@
             <nav class="header__theme-menu">
                 <ul class="header__theme-menu-list">
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_type_light">
+                        <button class="header__theme-menu-button  header__theme-menu-button_type_light" >
                             День
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" disabled>
+                        <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto" >
                             Авто
                         </button>
                     </li>
                     <li class="header__theme-menu-item">
-                        <button class="header__theme-menu-button header__theme-menu-button_type_dark">
+                        <button class="header__theme-menu-button header__theme-menu-button_type_dark" >
                             Неон
                         </button>
                     </li>
